Fix no data message showing in appropriately. Use receiptDetail.amount info, fix barecode without checksum. Fix top product name is too long.

--- a/client/app/styles/custom.less
+++ b/client/app/styles/custom.less
@@ -458,12 +458,13 @@
         font-size: @font-size-h3;    
     }
 
-    .label {
+    .name {
         //.text;
         color: black;
         font-size: @font-size-h3;
         margin: 0px;
         padding: 0px;
+        line-height: 0.8;
     //    left: 200px;
     //    width: 120px;
     //    bottom: 120px;
